--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "aion",
   "displayName": "Aion",
   "description": "Aion language support. The language repository - https://github.com/aion-ics/aion (if not public, wait until it is)",
-  "version": "0.5.0",
+  "version": "1.0.0",
   "engines": {
     "vscode": "^1.97.0"
   },
@@ -14,7 +14,30 @@
   "categories": [
     "Programming Languages"
   ],
+ 
+  "scripts": {
+      "antlr4ts": "antlr4ts -visitor -o ./src/antlr/generated src/Aion.g4",
+      "vscode:prepublish": "npm run compile",
+      "compile": "tsc -p ./",
+    "watch": "tsc -watch -p ./"
+  },
   "icon": "assets/aion_png.png",
+  "devDependencies": {
+    "@arethetypeswrong/cli": "^0.17.4",
+    "@types/node": "^22.13.4",
+    "antlr4ts-cli": "^0.5.0-alpha.4",
+    "resedit-cli": "^2.0.0",
+    "tsup": "^8.3.6",
+    "tsx": "^4.19.3",
+    "@types/vscode": "^1.87.0",
+    "typescript": "^5.7.3"
+  },
+  "main": "./out/extension.js",
+  "dependencies": {
+    "aion-ics": "file:",
+    "antlr4ts": "^0.5.0-alpha.4",
+    "chalk": "^4.1.2"
+  },
   "contributes": {
     "languages": [
       {
